--- a/.github/workflows/extract_v2ray_links.yml
+++ b/.github/workflows/extract_v2ray_links.yml
@@ -2,7 +2,7 @@ name: Scrape V2Ray Links
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # Runs every 10 minutes
+   - cron: '0 */3 * * *'
   workflow_dispatch:
 
 jobs:
