--- a/.github/workflows/extract_v2ray_links.yml
+++ b/.github/workflows/extract_v2ray_links.yml
@@ -83,4 +83,5 @@ jobs:
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add base64 base64_1 ${{ env.file }} .last_switch .last_file
         git commit -m "Update V2Ray links"
+        git commit -am "Updated at $(TZ=UTC-8 date +'%Y-%m-%d %H:%M:%S')"
         git push https://x-access-token:${PROV2}@github.com/${{ github.repository }}.git HEAD:main
